# faster-agent-rs

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bedrock-models.html  install.sh  mcp.json  todo.md
.github/workflows/: ci.yml  release.yml
crates/skill-agent/: Cargo.toml  README.md
crates/skill-agent/src/: agents.rs  main.rs
crates/skill-core/: Cargo.toml  README.md
crates/skill-core/src/: lib.rs
crates/skill-discovery/: Cargo.toml  README.md
crates/skill-discovery/src/: engine.rs  lib.rs  prompts.rs
crates/skill-embeddings/: Cargo.toml  README.md
crates/skill-embeddings/src/: error.rs  lib.rs
crates/skill-executor/: Cargo.toml  README.md
crates/skill-executor/src/: context.rs  error.rs  lib.rs
crates/skill-llm/: Cargo.toml  README.md
crates/skill-llm/src/: lib.rs
crates/skill-llm/src/bedrock/: auth.rs  bearer.rs  converse.rs  convert.rs  mantle.rs  mod.rs  models.rs
crates/skill-mcp/: Cargo.toml  README.md
crates/skill-mcp/src/: client.rs  config.rs  error.rs  lib.rs  registry.rs
crates/skill-registry/: Cargo.toml  README.md
crates/skill-registry/src/: error.rs  lib.rs
crates/skill-tools/: Cargo.toml  README.md
crates/skill-tools/src/: bash.rs  lib.rs  read.rs  skill.rs  write.rs
docs/providers/: bedrock.md
examples/: basic.rs
skills/: README.md  aws_bedrock_models.html  crates_summary.txt  math_results.txt  minimax-m3-news.md  minimax_m3_research.md
skills/bedrock-models/: SKILL.md  prompt_context.md
skills/bedrock-models/scripts/: track_models.py
skills/code-review/: SKILL.md
skills/rss-fetcher/: SKILL.md
skills/skills/: read_test.md
skills/web-scraper/: SKILL.md
skills/web-scraper/scripts/: scrape.sh
tests/: integration.rs
