[workspace]
members = [
    "crates/skill-core",
    "crates/skill-registry", 
    "crates/skill-embeddings",
    "crates/skill-discovery",
    "crates/skill-executor",
    "crates/skill-tools",
    "crates/skill-llm",
    "crates/skill-mcp",
    "crates/skill-agent",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Cleber Rodrigues <clebermasters@example.com>"] # Update as needed
repository = "https://github.com/clebermasters/faster-agent-rs"
description = "Autonomous skill discovery agent with LLM tool chaining, powered by Rust."
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
anyhow = "1.0"
async-stream = "0.3"

# AWS Bedrock
aws-config             = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-sdk-sts            = "1"
aws-credential-types   = "1"
aws-smithy-types       = "1"

# MCP SDK
rust-mcp-sdk = "0.8"
rust-mcp-transport = "0.8"

# Skill parsing
agent-skills = "0.2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# For async concurrency
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
