[package]
name = "skill-agent"
version.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
skill-core = { path = "../skill-core", version = "0.2.1" }
skill-registry = { path = "../skill-registry", version = "0.2.1" }
skill-embeddings = { path = "../skill-embeddings", version = "0.2.1" }
skill-discovery = { path = "../skill-discovery", version = "0.2.1" }
skill-executor = { path = "../skill-executor", version = "0.2.1" }
skill-tools = { path = "../skill-tools", version = "0.2.1" }
skill-llm = { path = "../skill-llm", version = "0.2.1", features = ["bedrock"] }
skill-mcp = { path = "../skill-mcp", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
colored = "3.1.1"
[dev-dependencies]
tempfile = "3"
