[package]
name = "skill-core"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
