[package]
name = "skill-discovery"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
skill-core = { path = "../skill-core" }
skill-registry = { path = "../skill-registry" }
skill-embeddings = { path = "../skill-embeddings" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
