[package]
name = "skill-discovery"
version.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
skill-core = { path = "../skill-core", version = "0.2.1" }
skill-registry = { path = "../skill-registry", version = "0.2.1" }
skill-embeddings = { path = "../skill-embeddings", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
