[package]
name = "skill-embeddings"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
skill-core = { path = "../skill-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
[dev-dependencies]
