[package]
name = "skill-executor"
version.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
skill-core = { path = "../skill-core", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
[dev-dependencies]
tempfile = "3"
