[package]
name = "skill-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dependencies.skill-tools]
path = "../skill-tools"
