[package]
name = "skill-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM providers integration for the Skill Agent framework"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dependencies.skill-tools]
path = "../skill-tools"

[dependencies.skill-mcp]
path = "../skill-mcp"
