[package]
name = "skill-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM providers integration for the Skill Agent framework"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
colored = "3"
futures = { workspace = true }
indicatif = "0.18.4"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# AWS Bedrock (optional — enabled via "bedrock" feature)
aws-config             = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-sdk-sts            = { workspace = true, optional = true }
aws-credential-types   = { workspace = true, optional = true }
aws-smithy-types       = { workspace = true, optional = true }

[dependencies.skill-tools]
path = "../skill-tools"
version = "0.2.0"

[dependencies.skill-mcp]
path = "../skill-mcp"
version = "0.2.0"

[features]
bedrock = [
    "aws-config",
    "aws-sdk-bedrockruntime",
    "aws-sdk-sts",
    "aws-credential-types",
    "aws-smithy-types",
]
