[package]
name = "skill-mcp"
version.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
rust-mcp-sdk = { workspace = true }
rust-mcp-transport = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
[dev-dependencies]
tokio-test = "0.4"
