[package]
name = "skill-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
skill-core = { path = "../skill-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
