[package]
name = "skill-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

skill-core = { path = "../skill-core" }
skill-executor = { path = "../skill-executor" }
