[package]
name = "skill-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tools and capability execution for the Skill Agent framework"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

skill-core = { path = "../skill-core", version = "0.2.1" }
skill-executor = { path = "../skill-executor", version = "0.2.1" }
